fix some refactoring

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Nanum+Gothic:wght@400;700&family=Pattaya&family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Nanum+Gothic:wght@400;700&family=Pattaya&family=Poppins:wght@300;400;500;600;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,16 +6,16 @@
 :rorot {
   --bg: #0f172a;
   --textColor: #ddd;
-  --softBg : #1f273a;
-  --softTextColor : #a6a6a6;
+  --softBg: #1f273a;
+  --softTextColor: #a6a6a6;
 }
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   /* width: 100%;
   margin: 0 auto;
   padding: 2rem 20rem; */
@@ -23,14 +23,14 @@ body{
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem 6rem;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-.pagination a{
+.pagination a {
   display: flex !important;
   align-items: center !important;
   justify-content: center !important;
@@ -43,11 +43,11 @@ a{
   padding: 10px 20px !important;
   text-decoration: none !important;
 }
-.pagination a:hover{
+.pagination a:hover {
   background-color: #ccc;
   color: #fff;
 }
-.pagination .active{
+.pagination .active {
   background-color: cornflowerblue;
   color: black;
 }
@@ -72,35 +72,28 @@ a{
   animation: loader-dots3 0.6s infinite;
 }
 
-
 @keyframes loader-dots1 {
   0% {
-      transform: scale(0);
+    transform: scale(0);
   }
   100% {
-      transform: scale(1);
+    transform: scale(1);
   }
 }
 @keyframes loader-dots3 {
   0% {
-      transform: scale(1);
+    transform: scale(1);
   }
   100% {
-      transform: scale(0);
+    transform: scale(0);
   }
 }
 @keyframes loader-dots2 {
   0% {
-      transform: translate(0, 0);
+    transform: translate(0, 0);
   }
   100% {
-      transform: translate(24px, 0);
+    transform: translate(24px, 0);
   }
 }
 
-/* @media screen and (max-width:768px) {
-  body{
-    width: 100%;
-  }
-  
-} */
